cards added, align fix

--- a/src/CyberTarot/style.css
+++ b/src/CyberTarot/style.css
@@ -354,7 +354,9 @@
 }
 
 .fateElement{
-    display: ruby;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     min-width: 33%;
 }
 
